pagination fix (removed wrapping div from table body)

--- a/dom-exercise/styles/layout.css
+++ b/dom-exercise/styles/layout.css
@@ -39,6 +39,7 @@ main {
     border-width: thin;
     padding-left: 5px;
     padding-right: 5px;
+    vertical-align: middle;
 }
 
 .tablePagination {
